@@ -17,6 +17,7 @@ import math
 class NetherPortalBlock(mcpython.common.block.AbstractBlock.AbstractBlock):
     """
     Class for the nether portal block
+    Uses the entity no collision collide system
     """
 
     NAME = "minecraft:nether_portal"
@@ -51,15 +52,19 @@ class NetherPortalBlock(mcpython.common.block.AbstractBlock.AbstractBlock):
         chunk = shared.world.get_dimension_by_name(
             self.dimension
         ).get_chunk_for_position(self.position)
+
         if self.check_valid_block((x, y + 1, z), chunk):
             return
+
         if self.check_valid_block((x, y - 1, z), chunk):
             return
+
         if self.axis == "x":
             if self.check_valid_block((x + 1, y, z)):
                 return
             if self.check_valid_block((x - 1, y, z)):
                 return
+
         elif self.axis == "z":
             if self.check_valid_block((x, y, z + 1)):
                 return
@@ -71,46 +76,53 @@ class NetherPortalBlock(mcpython.common.block.AbstractBlock.AbstractBlock):
             chunk = shared.world.get_dimension_by_name(
                 self.dimension
             ).get_chunk_for_position(position)
-        block = chunk.get_block(position)
+
+        block = chunk.get_block(position, none_if_str=True)
+
         if (
             block is None
-            or isinstance(block, str)
             or "#minecraft:supports_nether_portal" not in block.TAGS
         ):
-            # print("removing portal as {} does not contain an valid block ({})".format(position, block))
             chunk.remove_block(self.position)
             return True
+
         return False
 
-    def on_no_collision_collide(self, player, previous: bool):
-        if player.should_leave_nether_portal_before_dim_change and not previous:
-            player.should_leave_nether_portal_before_dim_change = False
-        elif player.should_leave_nether_portal_before_dim_change:
-            return
-        if player.in_nether_portal_since is None or not previous:
-            player.in_nether_portal_since = time.time()
-        if time.time() - player.in_nether_portal_since >= 4 or player.gamemode in (
+    def on_no_collision_collide(self, entity, previous: bool):
+        if entity.should_leave_nether_portal_before_dim_change:
+            if not previous:
+                entity.should_leave_nether_portal_before_dim_change = False
+            else:
+                return
+
+        if entity.in_nether_portal_since is None or not previous:
+            entity.in_nether_portal_since = time.time()
+
+        if time.time() - entity.in_nether_portal_since >= 4 or entity.gamemode in (
             1,
             3,
         ):
             logger.println(
-                "[PORTAL] changing dimension nether <-> overworld... (from: '{}')".format(
-                    player.dimension.name
+                "[PORTAL] changing dimension nether <-> overworld... (from '{}'-dimension)".format(
+                    entity.dimension.get_name()
                 )
             )
             # todo: create portal on the other side if needed
             # todo: search for portal on other side
             # todo: make it possible for other entities, not only players (-> API change needed!)
+            # todo: add dimension tags for defining this factors, and move teleport code out of here!
 
-            if player.dimension.name == "minecraft:overworld":
-                x, y, z = player.position
-                player.teleport(
+            if entity.dimension.name == "minecraft:overworld":
+                x, y, z = entity.position
+                entity.teleport(
                     (math.floor(x / 8), y, math.floor(z / 8)), "minecraft:the_nether"
                 )
-            elif player.dimension.name == "minecraft:the_nether":
-                x, y, z = player.position
-                player.teleport((x * 8, y, z * 8), "minecraft:overworld")
-            player.in_nether_portal_since = None
+
+            elif entity.dimension.name == "minecraft:the_nether":
+                x, y, z = entity.position
+                entity.teleport((x * 8, y, z * 8), "minecraft:overworld")
+
+            entity.in_nether_portal_since = None
 
 
 @shared.mod_loader("minecraft", "stage:block:load")
