@@ -49,7 +49,7 @@ information on development:
 
 changelog of snapshot <21w07a> released on <...> targeting <21w05b>
     This snapshot breaks again compatibility, mainly the following:
-        - rework how the world generates - from ground up!
+        - rework how the world generates - from ground up! [WIP]
 
     Commands:
         - added /worldgendebug command
@@ -57,6 +57,10 @@ changelog of snapshot <21w07a> released on <...> targeting <21w05b>
     World Generation:
         - added async world generation process
         - added access system from other processes to the current world
+
+    Launch options:
+        - added options to disable mod loader, data pack loader, and reosurce pack loader
+        - boosted server load cycle even more!
 
 
 changelog of snapshot 21w04a released on 27.01.2021, targeting 21w03a
